--- a/selab/courses/cse326/2019/lecture/lec.css
+++ b/selab/courses/cse326/2019/lecture/lec.css
@@ -16,6 +16,8 @@ body {
   font-size: 13pt;
   padding-top: 25px;
   padding-bottom: 25px;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 #slide0 h1{
@@ -23,7 +25,7 @@ body {
   padding: 10px;
   margin-right: 10px;
   color: black;
-} 
+}
 /* css for left section */
 
 .layout {
@@ -47,7 +49,7 @@ body {
 }
 
 #font select{
-  width: 200px;
+  width: 80%;
   height: 30px;
   border: 6px solid transparent;
   border-radius: 5px;
