--- a/selab/common/styles/common.css
+++ b/selab/common/styles/common.css
@@ -140,3 +140,13 @@ header[role="banner"] #menu li a:hover, header[role="banner"] #menu li a.selecte
 	width: 100px;
 	vertical-align: middle;
 }
+
+.setting-tab {
+	background-color: #34495e;
+	position: fixed;
+  top: 70px;
+  right: 50px;
+  width: 300px;
+  border: 3px solid white;
+	color: white;
+}
