--- a/selab/members/styles/members.css
+++ b/selab/members/styles/members.css
@@ -11,10 +11,11 @@
     width: 100%;
     padding-left: 10px;
     margin: 0;
-    background-color:rgb(211, 237, 245);
+    background-color:#C4C4C4;
     color: black;
     line-height: 52px;
     height: 52px;
+		color: #404040;
 }
 
 .human img{
