--- a/selab/courses/styles/course-slides.css
+++ b/selab/courses/styles/course-slides.css
@@ -50,6 +50,10 @@ tr>th:first-child, tr>td:first-child {
 	border-right: 1px solid #dfdfdf;
 }
 
+#slides table {
+      width: 100%;
+}
+
 #slides th.title, #slides td.title {
 	height: 48px;
 }
