--- a/selab/contact/styles/contact.css
+++ b/selab/contact/styles/contact.css
@@ -9,7 +9,7 @@
 
 .wrap h2{
 	width: 99%;
-	background-color: #8bcbe3;
+	background-color: #C4C4C4;
 	font-size: 20px;
 	line-height: 40px;
 	height: 40px;
@@ -50,7 +50,7 @@
 	width: 690px;
 	height: 350px;
 	margin-left:-345px;
-	
+
 	color:#4796bd;
 	border-radius: 5px;
 	border: 2px solid #4796bd;
