--- a/selab/common/styles/common.css
+++ b/selab/common/styles/common.css
@@ -9,8 +9,8 @@ html{
 }
 
 body {
-	background-color: white;
-	font-family: "Roboto", "Nanum Gothic", "Apple SD Gothic Neo", "Malgun Gothic", sans-serif;
+	background-color: #f2f2f2;
+	font-family: "Nanum Gothic", "Malgun Gothic", sans-serif;
 }
 
 a:hover {
@@ -65,6 +65,10 @@ nav{
 	/* background-color: #f2f2f2; */
 }
 
+#setting img{
+	vertical-align: text-bottom;
+}
+
 #logo {
 	color: #fe4a49;
 	/* border-radius: 10px; */
@@ -97,47 +101,47 @@ header[role="banner"] #menu li a:hover, header[role="banner"] #menu li a.selecte
 	/* border-radius: 10px; */
 }
 
- footer[role="contentinfo"] {
-  	height: 30px;
-  	width: 1145px;
-  	margin: 0 auto;
-  	/*min-width: 1280px;  width(.container) */
+footer[role="contentinfo"] {
+	height: 30px;
+	width: 1145px;
+	margin: 0 auto;
+	/*min-width: 1280px;  width(.container) */
 
-  	line-height: 30px;
-  }
+	line-height: 30px;
+}
 
-  footer[role="contentinfo"] .container {
-  	position: fixed;
-  	bottom: 0px;
-  	width: 1145px;
-  	height: 30px;
-  	z-index: 1;
-  	border-radius: 3px 3px 0px 0px;
-  	background-color: rgb(214, 214, 214);
-  }
+footer[role="contentinfo"] .container {
+	position: fixed;
+	bottom: 0px;
+	width: 1145px;
+	height: 30px;
+	z-index: 1;
+	border-radius: 3px 3px 0px 0px;
+	background-color: rgb(214, 214, 214);
+}
 
-  footer[role="contentinfo"] p {
-  	font-size: 9pt;
-  	text-align: center;
-  	font-weight: 100;
-  	color:rgb(139, 139, 139);
-  }
+footer[role="contentinfo"] p {
+	font-size: 9pt;
+	text-align: center;
+	font-weight: 100;
+	color:rgb(139, 139, 139);
+}
 
-  .pull-left {
-  	float: left;
-  }
+.pull-left {
+	float: left;
+}
 
- .pull-right {
-  	float: right;
- }
+.pull-right {
+	float: right;
+}
 
- .inline-list > li {
-  	display: inline-block;
- }
+.inline-list > li {
+	display: inline-block;
+}
 
- .scrollable {
-  	overflow-x: hidden;
-  	overflow-y: scroll;
+.scrollable {
+	overflow-x: hidden;
+	overflow-y: scroll;
 }
 
 /* for the disabled */
@@ -156,12 +160,43 @@ header[role="banner"] #menu li a:hover, header[role="banner"] #menu li a.selecte
 	vertical-align: middle;
 }
 
-.setting-tab {
-	background-color: #34495e;
+#settingtab {
+
+	background-color: #f9f9f9;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	position: fixed;
-  top: 70px;
-  right: 50px;
-  width: 300px;
-  border: 3px solid white;
-	color: white;
+	top: 70px;
+	right: 50px;
+	width: 300px;
+	color: black;
+	overflow: scroll;
+	height: 450px;
+	display: none;
+	padding-left: 15px;
 }
+
+#settingtab p {
+	font-weight: bold;
+	margin-bottom: 2px;
+}
+#font{
+  margin-bottom: 10px;
+}
+
+#font select, #background select{
+  width: 80%;
+  height: 30px;
+  border: 6px solid transparent;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+#font select option, #background select option{
+  padding: 5px;
+  font-size: 15px;
+}
+
+select #backselect option[value="1"]{
+	background: url("../images/thm1.png") 0 0 no-repeat;
+}
+
