you can change order

--- a/selab/home/styles/home.css
+++ b/selab/home/styles/home.css
@@ -9,7 +9,15 @@ h1{
 	margin: 40px auto 40px;
 }
 
-.menu a {
+#sortable {
+	width: 687px;
+	height:100%;
+	margin: 0;
+	padding: 0;
+	float: left;
+}
+
+#sortable a {
 	width: 229px;
 	height: 229px;
 	font-size: 20px;
@@ -21,12 +29,13 @@ h1{
 	line-height: 229px;
 }
 
-.menu div a {
+#ind {
 	width: 458px;
 	height: 458px;
 	margin: 0;
-	float: 0;
+	float: left;
 	line-height: 458px;
+	text-align: center;
 }
 
 #res:hover, #gal:hover, #pub:hover, #mem:hover, #not:hover, #cou:hover {
