--- a/selab/research/styles/research.css
+++ b/selab/research/styles/research.css
@@ -21,7 +21,7 @@
 
 /*íƒ­ë°” css ë*/
 .subject{
-	position: relative;
+	/* position: relative; */
 	overflow: hidden;
 	padding-bottom: 10px;
 	background-color: white;
