--- a/selab/common/styles/common.css
+++ b/selab/common/styles/common.css
@@ -70,7 +70,7 @@ nav {
 	line-height: 52px;
 	padding-top: 5px;
 	padding-bottom: 5px;
-	overflow: hidden;
+	/* overflow: hidden; */
 }
 
 #menu {
@@ -81,7 +81,7 @@ nav {
 	line-height: 52px;
 	padding-top: 5px;
 	padding-bottom: 5px;
-	overflow: hidden;
+	/* overflow: hidden; */
 }
 
 nav img{
@@ -206,14 +206,12 @@ select #backselect option[value="1"]{
 	background-color: #f9f9f9;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	position: fixed;
-  width: 14%;
 	color: white;
 	list-style-type: none;
 	font-size: 20px;
 	line-height: normal;
-	overflow: hidden;
+	/* overflow: hidden; */
 	padding-top: 25px;
-	min-width: 220px;
 }
 
 #nav div.nav-list {
