--- a/selab/home/styles/home.css
+++ b/selab/home/styles/home.css
@@ -20,7 +20,7 @@ h1{
 #sortable a {
 	width: 229px;
 	height: 229px;
-	font-size: 20px;
+/*	font-size: 20px;*/
 	font-weight: 400;
 	color: white;
 	float: left;
