--- a/selab/home/styles/theme1.css
+++ b/selab/home/styles/theme1.css
@@ -1,6 +1,11 @@
-.menu a {
+.menu a{
   background-color: #765D69;
 }
+
+/*.imgslide img{
+	border-color: #765D69;
+}
+*/
 
 #not {
 	background-color: #FCD0BA;
