--- a/selab/common/styles/common.css
+++ b/selab/common/styles/common.css
@@ -70,18 +70,18 @@ nav {
 	line-height: 52px;
 	padding-top: 5px;
 	padding-bottom: 5px;
-	overflow: hidden;
+	/* overflow: hidden; */
 }
 
 #menu {
 	height: 52px;
 	width: 100%;
-	/*min-width: 1280px;  width(.container) */
+	background-color: rgb(232, 232, 232);
 	background-color: rgba(232, 232, 232, .9);
 	line-height: 52px;
 	padding-top: 5px;
 	padding-bottom: 5px;
-	overflow: hidden;
+	/* overflow: hidden; */
 }
 
 nav img{
@@ -97,16 +97,15 @@ nav img{
 
 header[role="banner"] #menu li a, header[role="banner"] div[role="login"] a, nav a{
 	padding: 0 15px;
-	font-size: 18px;
+	/*font-size: 18px;*/
 	font-weight: bold;
 	color: #fe4a49;
 	display: block;
-	color: #fe4a49;
 	margin: 0 5px;
 }
 
 header[role="banner"] div[role="login"] a:hover, header[role="banner"] #menu li a:hover, header[role="banner"] #menu li a.selected, #contact:hover, #setting:hover, .selected, div[role="login"] a:hover{
-  background-color: #fe4a49;
+  	background-color: #fe4a49;
 	color: white;
 }
 
@@ -115,7 +114,6 @@ footer[role="contentinfo"] {
 	width: 1145px;
 	margin: 0 auto;
 	/*min-width: 1280px;  width(.container) */
-
 	line-height: 30px;
 }
 
@@ -161,25 +159,86 @@ footer[role="contentinfo"] p {
 }
 
 #settingtab {
-	background-color: #f9f9f9;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	position: fixed;
-	top: 70px;
-	right: 50px;
-	width: 300px;
-	color: black;
-	overflow: scroll;
-	height: 450px;
-	display: none;
-	padding-left: 15px;
-	z-index: 99999;
-	line-height: 52px;
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 9999;
+  top: 0;
+  left: 0;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.8);
+  overflow-x: hidden;
+	color: white;
+  transition: 0.5s;
+}
+
+#settingtab .closebtn {
+	width: 5%;
+	float: right;
+  font-size: 60px;
+	color: white;
 }
 
 #settingtab p {
 	font-weight: bold;
 	margin-bottom: 2px;
 }
+
+#sample, #option {
+	width : 45%;
+	float: left;
+	margin: 0;
+	padding: 0;
+	padding-top: 80px;
+}
+
+#samplePage {
+	width : 400px;
+	height : 200px;
+	background-color: #fff4d1;
+	margin: 0 auto;
+	padding: 0;
+}
+
+#SampleH {
+	color:#fe4a49;
+	width: 100%;
+	height: 50px;
+	font-size: 10pt;
+	line-height: 25px;
+}
+
+#SampleH1 {
+	background-color: white;
+	width: 100%;
+	height: 25px;
+}
+
+#SampleH2 {
+	background-color: rgb(232, 232, 232);
+	background-color: rgba(232, 232, 232, .9);
+	width: 100%;
+	height: 25px;
+}
+
+#sampleC {
+	margin: 0 auto;
+	width: 200px;
+}
+
+#sampleC h1{
+	color:#fe4a49;
+	font-size: 12pt;
+}
+
+#sampleC p {
+	background-color: white;
+	color: black;
+	font-size: 5pt;
+	height: 80px;
+	padding: 5px;
+}
+
 #font{
   margin-bottom: 10px;
 }
@@ -206,14 +265,12 @@ select #backselect option[value="1"]{
 	background-color: #f9f9f9;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	position: fixed;
-  width: 14%;
 	color: white;
 	list-style-type: none;
 	font-size: 20px;
 	line-height: normal;
-	overflow: hidden;
+	/* overflow: hidden; */
 	padding-top: 25px;
-	min-width: 220px;
 }
 
 #nav div.nav-list {
@@ -245,7 +302,6 @@ select #backselect option[value="1"]{
 	font-weight: bold;
 	color: #fe4a49;
 	display: block;
-	color: #fe4a49;
 	float: left;
 	vertical-align: text-bottom;
 }
