--- a/selab/gallery/styles/gallery.css
+++ b/selab/gallery/styles/gallery.css
@@ -122,9 +122,6 @@ select {
 	cursor: pointer;
 }
 
-.hidden{
-	display: none
-}
 #page-bar {
     width: 100%;
     line-height: 20px;
@@ -168,7 +165,7 @@ select {
 }
 .back{
 	padding: 10px;
-	background-color: #f5f5f5;
+	/* background-color: #f5f5f5; */
 	margin-bottom: 10px;
 }
 .first-tab{
@@ -184,4 +181,12 @@ select {
   margin-top: 7px;
   background-color: #afafaf;
   color: #d6d6d6;
+}
+
+.column {
+	display: none;
+}
+
+.show {
+	display: block;
 }
