--- a/selab/contact/styles/contact.css
+++ b/selab/contact/styles/contact.css
@@ -18,21 +18,22 @@
 }
 
 #map{
-	width: 450px;
-	height: 450px;
+	width: 440px;
+	height: 440px;
 	margin-left: 10px;
-	margin-right: 10px;
+	margin-right: 30px;
 	float: left;
 }
 
 .wrap ul {
 	list-style-image: url("/../members/images/list-img.png");
-	float: left;
+	/*float: left;*/
 }
 .wrap ul li{
-	margin: 13px 0;
-	margin-left: 30px;
+	margin: 20px;
+	margin-left: 10px;
 	color: black;
+
 }
 
 .wrap ul li p{
