--- a/selab/members/styles/members.css
+++ b/selab/members/styles/members.css
@@ -5,8 +5,10 @@
 	border-radius: 3px;
 }
 
+.position{
+	font-size: 15px;
+}
 #main h2{
-	font-size: 20px;
     font-weight: bold;
     width: 100%;
     padding-left: 10px;
@@ -15,7 +17,7 @@
     color: black;
     line-height: 52px;
     height: 52px;
-		color: #404040;
+	color: #404040;
 }
 
 .human img{
@@ -39,7 +41,7 @@
 
 .human{
 	margin: 10px;
-	overflow: hidden;
+	overflow: auto;
 }
 
 .photo{
