--- a/selab/notice/styles/notice.css
+++ b/selab/notice/styles/notice.css
@@ -29,17 +29,20 @@
 	width: 70%;
 	border-right: 1px solid #dfdfdf;
 	text-align: center;
+	overflow:hidden;
 }
 
 .contents li.name{
 	width: 15%;
 	border-right: 1px solid #dfdfdf;
 	text-align: center;
+	overflow:hidden;
 }
 
 .contents li.time{
 	width: 15%;
 	text-align: center;
+	overflow:hidden;
 }
 
 .contents .header li {
@@ -74,6 +77,7 @@
 	height: 40px;
 	line-height: 40px;
 	cursor: pointer;
+	clear: both;
 }
 
 .contents .entry .content {
