--- a/selab/common/styles/common.css
+++ b/selab/common/styles/common.css
@@ -42,15 +42,16 @@ h2 {
 }
 
 .main-container {
-	width: 100%;
-	overflow: scroll;
+	width: auto;
+	overflow-x: hidden;
+	overflow-y: scroll;
 	margin-top: 120px;
 }
 
 .contents {
 	font-size: 15px;
-	width: 65%;
-	margin: 0 auto;
+	width: 86%;
+	padding: 0 7%;
 	/* margin-bottom: 40px; */
 }
 
@@ -94,7 +95,7 @@ nav img{
 	float: left;
 }
 
-header[role="banner"] #menu li a, header[role="banner"] div[role="login"] a, nav a{
+header[role="banner"] #menu li a, header[role="banner"] div[role="login"] a, nav a {
 	padding: 0 15px;
 	/*font-size: 18px;*/
 	font-weight: bold;
@@ -103,7 +104,7 @@ header[role="banner"] #menu li a, header[role="banner"] div[role="login"] a, nav
 	margin: 0 5px;
 }
 
-header[role="banner"] div[role="login"] a:hover, header[role="banner"] #menu li a:hover, header[role="banner"] #menu li a.selected, #contact:hover, #setting:hover, .selected, div[role="login"] a:hover{
+header[role="banner"] div[role="login"] a:hover, header[role="banner"] #menu li a:hover, header[role="banner"] #menu li a.selected, #contact:hover, #setting:hover, .selected, div[role="login"] a:hover {
   background-color: #fe4a49;
 	color: white;
 }
@@ -232,6 +233,8 @@ footer[role="contentinfo"] p {
 #sampleC h1{
 	color:#fe4a49;
 	font-size: 12pt;
+	float: none;
+	margin: 0;
 }
 
 #sampleC p {
@@ -268,21 +271,19 @@ select #backselect option[value="1"]{
 	height: 100%;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	position: fixed;
-	color: white;
 	list-style-type: none;
-	font-size: 20px;
-	line-height: normal;
-	/* overflow: hidden; */
+	/* font-size: 20px; */
+	line-height: 52px;
+	overflow: hidden;
 	display: none;
 	z-index: 50;
 }
 
-#sideNav div.nav-list {
-	padding: 20px 16px;
-}
-
-#sideNav div.nav-list:hover {
-	background-color: #afafaf;
+#sideNav div.nav-list-right a {
+	padding: 0 15px;
+	font-weight: bold;
+	color: #fe4a49;
+	display: block;
 }
 
 #sideLogo {
@@ -298,7 +299,7 @@ select #backselect option[value="1"]{
 	float: left;
 	background-color: rgb(232, 232, 232);
 	height: 100%;
-	padding-top: 25px;
+	padding-top: 52px;
 }
 
 #sideNav .nav-list-left {
@@ -319,6 +320,7 @@ select #backselect option[value="1"]{
 	vertical-align: text-bottom;
 }
 
-#sideNav .nav-list-left a#sideSetting:hover, #sideNav .nav-list-left div[role=login]:hover, #sideNav .nav-list-left a#sideContact:hover {
-	background-color: #fe4a49;
+#sideNav .nav-list-left #sideSetting:hover, #sideNav .nav-list-left #sideContact:hover, #sideNav .nav-list-right a.selected, #sideNav .nav-list-right a:hover{
+  background-color: #fe4a49;
+	color: white;
 }
